; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/avr/extr_hd44780.c_lcd_puts_p.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/avr/extr_hd44780.c_lcd_puts_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lcd_puts_p(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load i8*, i8** %2, align 8
  %6 = getelementptr inbounds i8, i8* %5, i32 1
  store i8* %6, i8** %2, align 8
  %7 = ptrtoint i8* %5 to i32
  %8 = call signext i8 @pgm_read_byte(i32 %7)
  store i8 %8, i8* %3, align 1
  %9 = icmp ne i8 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %4
  %11 = load i8, i8* %3, align 1
  %12 = call i32 @lcd_putc(i8 signext %11)
  br label %4

13:                                               ; preds = %4
  ret void
}

declare dso_local signext i8 @pgm_read_byte(i32) #1

declare dso_local i32 @lcd_putc(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
